Fix the Bug of duplicated items in neighbor list

--- a/vpinsim/vpinsim.csproj
+++ b/vpinsim/vpinsim.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Road.cs" />
     <Compile Include="RoadSetFile.cs" />
     <Compile Include="Vehicle.cs" />
+    <Compile Include="vehiSetFile.cs" />
     <Compile Include="VpinSim.cs" />
   </ItemGroup>
   <ItemGroup>
