--- a/vpinsim/vpinsim.csproj
+++ b/vpinsim/vpinsim.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Library.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reporter.cs" />
     <Compile Include="Road.cs" />
     <Compile Include="RoadSetFile.cs" />
     <Compile Include="Vehicle.cs" />
